<resources>
    <string name="app_name">Assignment1</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_blue_button">This is a blue button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="paw">paw</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me"><![CDATA[Notify me :>]]></string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
