<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_medium">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_medium">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin_small"
            android:layout_weight="1"
            android:background="@color/blue_70"
            android:text="@string/this_is_a_blue_button"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/paw"
            android:src="@drawable/pawprint" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin_small"
            android:layout_weight="1"
            android:background="@color/green_70"
            android:text="@string/this_is_a_green_button"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_medium"
        android:background="@color/yellow_70"
        android:hint="@string/this_is_an_edittext" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_medium"
        android:background="@color/yellow_70"
        android:hint="@string/this_is_a_new_edittext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_huge"
        android:background="@color/pink_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/notify_me" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auto_backup" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>



